--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -53,7 +53,7 @@ La méthode utilisée pour la lecture, le nettoyage, l'injection des données et
 
 # Résultats
 
-La figure 1 montre la position des étudiants en fonction du nombre de lien. 
+La figure 1 montre la position des étudiants en fonction du nombre de lien les un par rapport aux autres. 
 La figure 2 représente la corrélation entre la centralité et le nombre de lien des étudiants. La corrélation entre ces deux facteurs n'est pas significative, car la relation n'Est pas linéaire avec un P-value de 0,2493.
 
 
