--- a/rapport/pnas-sample.bib
+++ b/rapport/pnas-sample.bib
@@ -1,29 +1,10 @@
-@inproceedings{belkin2002using,
-  title={Using manifold stucture for partially labeled classification},
-  author={Belkin, Mikhail and Niyogi, Partha},
-  booktitle={Advances in neural information processing systems},
-  pages={929--936},
-  year={2002}
-}
-
-@article{berard1994embedding,
-  title={Embedding Riemannian manifolds by their heat kernel},
-  author={B{\'e}rard, Pierre and Besson, G{\'e}rard and Gallot, Sylvain},
-  journal={Geometric \& Functional Analysis GAFA},
-  volume={4},
-  number={4},
-  pages={373--398},
-  year={1994},
-  publisher={Springer}
-}
-
-@article{coifman2005geometric,
-  title={Geometric diffusions as a tool for harmonic analysis and structure definition of data: Diffusion maps},
-  author={Coifman, Ronald R and Lafon, Stephane and Lee, Ann B and Maggioni, Mauro and Nadler, Boaz and Warner, Frederick and Zucker, Steven W},
-  journal={Proceedings of the National Academy of Sciences of the United States of America},
-  volume={102},
-  number={21},
-  pages={7426--7431},
-  year={2005},
-  publisher={National Acad Sciences}
+@article{collins1998s,
+  title={It's a small world},
+  author={Collins, James J and Chow, Carson C},
+  journal={Nature},
+  volume={393},
+  number={6684},
+  pages={409--410},
+  year={1998},
+  publisher={Nature Publishing Group}
 }
