--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -71,11 +71,8 @@ Discussion Figure 3 (Eli)
 
 # Conclusion
 
-Ligavit cetera et infelix nescius, sinu timorem admonitu ferrove exspectatas
-fuerant pulcherrime, mea sonum! Formae munera, est trahendo regem supplice.
-Verba lacrimis gradus, verbis iam tempore aratri sed, at imagine momordit. Teque
-esse, ante pariter desere in quae: illa socium inque meae: et ipso canos:
-peteretis? Temptanda Daedalus et palmis incumbere tempora ambit.
+voici un exemple de citation @collins1998s
+
 
 \newpage
 # Bibliographie{-}
