--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Exemple de rapport `Rmarkdown` en sortie d'un pipeline `targets`
+title: Réseau de collaborations des étudiants du cours BIO500 donné à l'Université de Sherbrooke à l'hiver 2022
 
 # Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
 author:
@@ -19,7 +19,7 @@ address:
     address: Université de Sherbrooke, Départment de biologie, 2500 Boulevard de l'Université, Sherbrooke, Québec, J1K 2R1
 
 abstract: |
-  Eurytus auris. Gerunt transierant miserorum latet; nisi cum, et circuitu nubila
+  LAURA : Eurytus auris. Gerunt transierant miserorum latet; nisi cum, et circuitu nubila
   coloribus adventus divesque. Loca partibus breve et unum maior stellis inpia et
   luporum. Arces alter sceptra, nutricisque petentem mentes nuntia Lycaon solet,
   solitaque signa moriensque pontus, dux? Corpora testataque, novo tumidum. Eurytus auris.
@@ -36,7 +36,7 @@ keywords:
   - Réseaux
 
 ## must be one of: pnasresearcharticle (usual two-column layout), pnasmathematics (one column layout), or pnasinvited (invited submissions only)
-pnas_type: pnasresearcharticle
+pnas_type: pnasresearcharticle.sty
 
 bibliography: pnas-sample.bib
 csl: pnas.csl
@@ -44,34 +44,35 @@ csl: pnas.csl
 ## change to true to add optional line numbering
 lineno: false
 
-output: rticles::pnas_article
+#output: rticles::pnas_article
 ---
 
 # Introduction
-**Voici un exemple de citation @berard1994embedding, et en voici deux autres [@berard1994embedding;@belkin2002using;@coifman2005geometric].** 
-Comme mentionné dans plusieurs études écologiques, les différents organismes d'un environnement donné sont tous liés entre eux par différents lien qui les unis. Ces liens correspondent à leur réseau de connection et permettent de voir l'impacte qu'une espèce aurait sur le reste de la population présente. Dans cette optique, il est possible de voir si les relations humaines pourraient avoir le même type de lien au niveau sociale.
-Ainsi, le but de ce rapport est de voir si le réseau de collaboration des étudiant du cours de BIO500 de l'université de Sherbrooke à l'hiver 2022 ont les mêmes propriétés qu'un réseau écologique typique d'un environnement naturel. Pour le savoir, nous cherchons à savoir s'il existe une correlation entre le nombre de liens des étudiants entre eux et leur centralité dans leur réseau de liens. Par la suite, le calcul du Bacon number d'un des étudiants pour calculer la distance entre les étudiants. 
+#Comme mentionné dans plusieurs études écologiques, les différents organismes d'un environnement donné sont tous liés entre eux par différents lien qui les unis. Ces liens correspondent à leur réseau de connection et permettent de voir l'impact qu'une espèce aurait sur le reste de la population présente. Dans cette optique, il est possible de voir si les relations humaines pourraient avoir le même type de lien au niveau social. 
+#Changer intro ?
+Dans ce rapport, nous nous penchons sur un type de réseau, soit le réseau de petit monde, à savoir si les caractéristique de ce réseau concordent avec celles du réseau de collaborations que nous avons obtenu. Ce dernier a été produit à partir d'une base de données des collaborations des étudiant(e)s du cours BIO500 donné à l'Université de Sherbrooke à l'hiver 2022. Afin de répondre à notre objectif, nous cherchons plus précisement à savoir s'il existe une corrélation entre le nombre de liens des étudiant(e)s entre eux/elles et leur centralité dans leur réseau de liens. Nous effectuons également le calcul du Bacon number d'une des étudiante pour calculer la distance entre cette étudiante et ses collègues du cours BIO500.  
 
 # Méthode
 
-La méthode utilisée pour la lecture, le nettoyage, l'injection des données et l'analyse des différentes données fut l'utilisation de code dans R version 4.1.3 et l'utilisation de GitHub pour le partage des données et le stockages.
+Nous avons tout d'abord récolté les données des 193 étudiant(e)s relié(e)s au cours BIO500, soit des étudiant(e)s inscrit(e)s au cours ou ayant collaboré avec des étudiant(e)s inscrit(e)s au cours. Nous avons classé ces données en trois tables, l'une concernant les étudiant(e)s en tant que tel (avec des informations telles que l'année de début de leurs études et le nom de leur programme d'études), l'autre concernant les cours (avec des informations telles que le sigle du cours et le nombre de crédits du cours) et la dernière concernant les collaborations entre les étudiant(e)s (avec des informations telles que le nom des deux étudiant(e)s et le sigle du cours dans lequel ils/elles ont collaboré). Nous avons utilisé le logiciel R version 4.1.3 pour faire la lecture, le nettoyage, l'injection des données et l'analyse des différentes données. À l'aide de ces données, nous avons généré trois figures nous permettant de répondre à notre objectif, à savoir si notre réseau se compare à un réseau de petit monde. Pour faciliter le lien entre les données, l'analyse et les figures, nous avons créé un script target.  Nous avons également utilisé GitHub pour faciliter le partage et le stockage des données.
 
 # Résultats
 
-La figure 1 montre la position des étudiants en fonction du nombre de lien les un par rapport aux autres. 
-La figure 2 représente la corrélation entre la centralité et le nombre de lien des étudiants. La corrélation entre ces deux facteurs n'est pas significative, car la relation n'est pas linéaire, car la corrélation a un P-value de 0,2493.
-La figure 3 représente le degré de séparation par rapport à un individue. Dans ce cas si, en prennant Élisabeth Roy comme individue, la fréquence est plus élevé plus le degré de séparation est élevé.
+La figure 1 montre le réseau de collaborations, soit la position des étudiants en fonction du nombre de liens les un par rapport aux autres.
+
+La figure 2 représente la corrélation entre la centralité et le nombre de lien des étudiants. La corrélation entre ces deux facteurs n'est pas significative, car la corrélation a un P-value de 0,2493 (P>0.05).
+
+La figure 3 représente le degré de séparation par rapport à l'étudiante Élisabeth Roy. On peut voir que la majorité des étudiants a entre 2 et 4 degrés de séparation avec Élisabeth Roy. 
 
 # Discussion
-Discussion Figure 1 (Eli)
+Le réseau que nous avons obtenu à la Figure 1 peut être considéré comme un réseau de petit monde pour plusieurs raisons. Ce type de réseau, dont l’exemple parfait est les réseaux sociaux, repose principalement sur deux caractéristiques. D’abord, la distance moyenne entre toutes les paires de nœuds d’un réseau de petit monde est faible @watts_collective_1998. Cela est un aspect présent chez les réseaux aléatoires, réseaux générés par un processus aléatoire. Plus précisément, le degré de séparation moyens entre les individus doit être aux alentours de six @watts_collective_1998. Cette constatation, démontrée par le sociologue Stanley Milgram, semble concorder avec notre réseau, dans lequel on peut voir que les étudiants sont tous à quelques liens seulement des autres étudiants. Pour un peu de perspective, Facebook a, en 2011, rectifié le nombre de liens entre ses 2 milliards d’utilisateurs : cette distance médiane est passé de six à seulement quatre @10.1145/2380718.2380723. Ensuite, pour qu’un réseau soit considéré comme un petit monde, il faut qu’il contienne un niveau de regroupement (clustering) local élevé, ce qui signifie que les nœuds sont généralement très connectés à leurs voisins immédiats @watts_collective_1998. Cette caractéristique n’est pas du tout présente chez les réseaux aléatoires. On peut également observer cette caractéristique sur notre réseau, principalement au centre, où l’on trouve des points plus larges, signifiant qu’ils sont davantage connectés à leurs voisins. Ces deux propriétés caractérisant les réseaux de petits mondes sont davantage détaillées dans les prochaines sections. 
 
 Discussion Figure 2 (Boum)
 
-Discussion Figure 3 (Eli)
+La Figure 3 nous indique le nombre de nœuds séparant Élisabeth Roy des autres étudiant(e)s. Ce nombre varie entre 1 et 4, la majorité des étudiants ayant un degré de séparation entre 2 et 4 avec Élisabeth Roy. Cette mesure se réfère directement au Bacon number ou au Erdös number, basés tout deux sur le phénomène de petit monde. Ces deux valeurs correspondent à la distance collaborative, d’un côté entre Kevin Bacon et d’autres acteurs/actrices ayant collaboré dans des films, et de l’autre entre le mathématicien Paul Erdos et d’autres auteurs/autrices ayant participé à l’écriture d’articles académiques @collins1998s. Selon le phénomène de petit monde, chaque personne aurait un degré de séparation avec une autre personne de six maximum, c’est-à-dire que deux personnes seraient liées par l’entremise de six personnes maximum. Cela concorde donc avec le résultat que nous avons obtenu à la Figure 3, soit qu'il y a 4 personnes au maximum séparant Élisabeth Roy des autres étudiant(e)s. Toutefois, cette valeur ne prend en compte qu’une seule étudiante. Il serait donc intéressant de faire la moyenne de ce même calcul pour tous les étudiants afin de voir le degré de séparation moyen entre les individus de notre réseau. 
 
 # Conclusion
 
-voici un exemple de citation @collins1998s
 
 
 \newpage
