--- a/rapport/pnas-sample.bib
+++ b/rapport/pnas-sample.bib
@@ -1,3 +1,22 @@
+
+@inproceedings{10.1145/2380718.2380723,
+author = {Backstrom, Lars and Boldi, Paolo and Rosa, Marco and Ugander, Johan and Vigna, Sebastiano},
+title = {Four Degrees of Separation},
+year = {2012},
+isbn = {9781450312288},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2380718.2380723},
+doi = {10.1145/2380718.2380723},
+abstract = {Frigyes Karinthy, in his 1929 short story "L\'{a}ncszemek" (in English, "Chains") suggested that any two persons are distanced by at most six friendship links.1 Stanley Milgram in his famous experiments challenged people to route postcards to a fixed recipient by passing them only through direct acquaintances. Milgram found that the average number of intermediaries on the path of the postcards lay between 4:4 and 5:7, depending on the sample of people chosen. We report the results of the first world-scale social-network graph-distance computations, using the entire Facebook network of active users (≈ 721 million users, ≈ 69 billion friendship links). The average distance we observe is 4:74, corresponding to 3:74 intermediaries or "degrees of separation", prompting the title of this paper. More generally, we study the distance distribution of Facebook and of some interesting geographic subgraphs, looking also at their evolution over time. The networks we are able to explore are almost two orders of magnitude larger than those analysed in the previous literature. We report detailed statistical metadata showing that our measurements (which rely on probabilistic algorithms) are very accurate.},
+booktitle = {Proceedings of the 4th Annual ACM Web Science Conference},
+pages = {33–42},
+numpages = {10},
+location = {Evanston, Illinois},
+series = {WebSci '12}
+}
+
+
 @article{collins1998s,
   title={It's a small world},
   author={Collins, James J and Chow, Carson C},
@@ -7,4 +26,25 @@
   pages={409--410},
   year={1998},
   publisher={Nature Publishing Group}
+}
+
+
+
+@article{watts_collective_1998,
+	title = {Collective dynamics of ‘small-world’ networks},
+	volume = {393},
+	copyright = {1998 Macmillan Magazines Ltd.},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/30918.},
+	doi = {10.1038/30918},
+	abstract = {Networks of coupled dynamical systems have been used to model biological oscillators1,2,3,4, Josephson junction arrays5,6, excitable media7, neural networks8,9,10, spatial games11, genetic control networks12 and many other self-organizing systems. Ordinarily, the connection topology is assumed to be either completely regular or completely random. But many biological, technological and social networks lie somewhere between these two extremes. Here we explore simple models of networks that can be tuned through this middle ground: regular networks ‘rewired’ to introduce increasing amounts of disorder. We find that these systems can be highly clustered, like regular lattices, yet have small characteristic path lengths, like random graphs. We call them ‘small-world’ networks, by analogy with the small-world phenomenon13,14 (popularly known as six degrees of separation15). The neural network of the worm Caenorhabditis elegans, the power grid of the western United States, and the collaboration graph of film actors are shown to be small-world networks. Models of dynamical systems with small-world coupling display enhanced signal-propagation speed, computational power, and synchronizability. In particular, infectious diseases spread more easily in small-world networks than in regular lattices.},
+	language = {en},
+	number = {6684},
+	urldate = {2022-04-24},
+	journal = {Nature},
+	author = {Watts, Duncan J. and Strogatz, Steven H.},
+	month = jun,
+	year = {1998},
+	keywords = {Science, Humanities and Social Sciences, multidisciplinary, Science, multidisciplinary},
+	pages = {440--442},
 }
