--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -53,7 +53,7 @@ Dans plusieurs études écologiques, les différents organismes d'un environneme
 
 # Méthode
 
-Nous avons tout d'abord récolté les données des 193 étudiant(e)s relié(e)s au cours BIO500, soit des étudiant(e)s inscrit(e)s au cours ou ayant collaboré avec des étudiant(e)s inscrit(e)s au cours. Nous avons classé ces données en trois tables, l'une concernant les étudiant(e)s en tant que tel (avec des informations telles que l'année de début de leurs études et le nom de leur programme d'études), l'autre concernant les cours (avec des informations telles que le sigle du cours et le nombre de crédits du cours) et la dernière concernant les collaborations entre les étudiant(e)s (avec des informations telles que le nom des deux étudiant(e)s et le sigle du cours dans lequel ils/elles ont collaboré). Nous avons utilisé le logiciel R version 4.1.3 pour faire la lecture, le nettoyage, l'injection des données et l'analyse des différentes données. À l'aide de ces données, nous avons généré trois figures nous permettant de répondre à notre objectif, à savoir si notre réseau se compare à un réseau de petit monde. Pour faciliter le lien entre les données, l'analyse et les figures, nous avons créé un script target.  Nous avons également utilisé GitHub pour faciliter le partage et le stockage des données.
+Nous avons tout d'abord récolté les données des 193 étudiant(e)s relié(e)s au cours BIO500, soit des étudiant(e)s inscrit(e)s au cours et ayant collaboré avec des étudiant(e)s inscrit(e)s au cours. Nous avons classé ces données en trois tables, l'une concernant les étudiant(e)s avec des informations telles que l'année de début de leurs études et le nom de leur programme d'études, la deuxième concernant les cours avec des informations telles que le sigle du cours et le nombre de crédits du cours et la dernière concernant les collaborations entre les étudiant(e)s avec les informations telles que le nom des deux étudiant(e)s et le sigle du cours dans lequel ils/elles ont collaboré. Nous avons utilisé le logiciel R version 4.1.3 pour faire la lecture, le nettoyage, l'injection des données et l'analyse des différentes données. À l'aide de ces données, nous avons généré trois figures nous permettant de répondre à notre objectif, à savoir si notre réseau se compare à un réseau de petit monde. Pour faciliter le lien entre les données, l'analyse et les figures, nous avons créé un script target.  Nous avons également utilisé GitHub pour faciliter le partage et le stockage des données.
 
 # Résultats
 
