--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -63,7 +63,7 @@ La figure 1 montre le réseau de collaborations, soit la position des étudiants
 
 ![Figure 2. Relation entre la centralité et le nombre de lien](%22../results/centralite.pdf%22)
 
-La figure 2 représente la corrélation entre la centralité et le nombre de lien des étudiants. La corrélation entre ces deux facteurs n'est pas significative, car la corrélation a un P-value de 0,2493 (P\>0.05).
+La figure 2 représente la corrélation entre la centralité et le nombre de lien entre les étudiants. La corrélation effectuée pour voir le lien entre ces deux facteurs n'est pas significative, car la corrélation linéaire obtient une valeur de P de 0,2493 (P>0.05).
 
 ![Figure 3. Degré de séparation d'Élisabeth Roy](%22../results/bacon.pdf%22)
 
@@ -74,7 +74,6 @@ La figure 3 représente le degré de séparation par rapport à l'étudiante Él
 Le réseau que nous avons obtenu à la Figure 1 peut être considéré comme un réseau de petit monde pour plusieurs raisons. Ce type de réseau, dont l'exemple parfait est les réseaux sociaux, repose principalement sur deux caractéristiques. D'abord, la distance moyenne entre toutes les paires de nœuds d'un réseau de petit monde est faible @watts_collective_1998. Cela est un aspect présent chez les réseaux aléatoires, réseaux générés par un processus aléatoire. Plus précisément, le degré de séparation moyens entre les individus doit être aux alentours de six @watts_collective_1998. Cette constatation, démontrée par le sociologue Stanley Milgram, semble concorder avec notre réseau, dans lequel on peut voir que les étudiants sont tous à quelques liens seulement des autres étudiants. Pour un peu de perspective, Facebook a, en 2011, rectifié le nombre de liens entre ses 2 milliards d'utilisateurs : cette distance médiane est passé de six à seulement quatre \@10.1145/2380718.2380723. Ensuite, pour qu'un réseau soit considéré comme un petit monde, il faut qu'il contienne un niveau de regroupement (clustering) local élevé, ce qui signifie que les nœuds sont généralement très connectés à leurs voisins immédiats @watts_collective_1998. Cette caractéristique n'est pas du tout présente chez les réseaux aléatoires. On peut également observer cette caractéristique sur notre réseau, principalement au centre, où l'on trouve des points plus larges, signifiant qu'ils sont davantage connectés à leurs voisins. Ces deux propriétés caractérisant les réseaux de petits mondes sont davantage détaillées dans les prochaines sections.
 
 Discussion Figure 2 (Laura)
-
 
 La Figure 3 nous indique le nombre de nœuds séparant Élisabeth Roy des autres étudiant(e)s. Ce nombre varie entre 1 et 4, la majorité des étudiants ayant un degré de séparation entre 2 et 4 avec Élisabeth Roy. Cette mesure se réfère directement au Bacon number ou au Erdös number, basés tout deux sur le phénomène de petit monde. Ces deux valeurs correspondent à la distance collaborative, d'un côté entre Kevin Bacon et d'autres acteurs/actrices ayant collaboré dans des films, et de l'autre entre le mathématicien Paul Erdos et d'autres auteurs/autrices ayant participé à l'écriture d'articles académiques @collins1998s. Selon le phénomène de petit monde, chaque personne aurait un degré de séparation avec une autre personne de six maximum, c'est-à-dire que deux personnes seraient liées par l'entremise de six personnes maximum. Cela concorde donc avec le résultat que nous avons obtenu à la Figure 3, soit qu'il y a 4 personnes au maximum séparant Élisabeth Roy des autres étudiant(e)s. Toutefois, cette valeur ne prend en compte qu'une seule étudiante. Il serait donc intéressant de faire la moyenne de ce même calcul pour tous les étudiants afin de voir le degré de séparation moyen entre les individus de notre réseau.
 
