--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -73,11 +73,13 @@ La figure 3 représente le degré de séparation des étudiants par rapport à l
 
 Le réseau que nous avons obtenu à la Figure 1 peut être considéré comme un réseau de petit monde pour plusieurs raisons. Ce type de réseau, dont l'exemple parfait est les réseaux sociaux, repose principalement sur deux caractéristiques. D'abord, la distance moyenne entre toutes les paires de nœuds d'un réseau de petit monde est faible @watts_collective_1998. Cela est un aspect présent chez les réseaux aléatoires, réseaux générés par un processus aléatoire. Plus précisément, le degré de séparation moyens entre les individus doit être aux alentours de six @watts_collective_1998. Cette constatation, démontrée par le sociologue Stanley Milgram, semble concorder avec notre réseau, dans lequel on peut voir que les étudiants sont tous à quelques liens seulement des autres étudiants. Pour un peu de perspective, Facebook a, en 2011, rectifié le nombre de liens entre ses 2 milliards d'utilisateurs : cette distance médiane est passé de six à seulement quatre \@10.1145/2380718.2380723. Ensuite, pour qu'un réseau soit considéré comme un petit monde, il faut qu'il contienne un niveau de regroupement (clustering) local élevé, ce qui signifie que les nœuds sont généralement très connectés à leurs voisins immédiats @watts_collective_1998. Cette caractéristique n'est pas du tout présente chez les réseaux aléatoires. On peut également observer cette caractéristique sur notre réseau, principalement au centre, où l'on trouve des points plus larges, signifiant qu'ils sont davantage connectés à leurs voisins. Ces deux propriétés caractérisant les réseaux de petits mondes sont davantage détaillées dans les prochaines sections.
 
-Discussion Figure 2 (Laura)
+La Figure 2 indique le nombre de lien par des étudiants rapport à leur centralité dans un réseau de type petit monde.
 
 La Figure 3 nous indique le nombre de nœuds séparant Élisabeth Roy des autres étudiant(e)s. Ce nombre varie entre 1 et 4, la majorité des étudiants ayant un degré de séparation entre 2 et 4 avec Élisabeth Roy. Cette mesure se réfère directement au Bacon number ou au Erdös number, basés tout deux sur le phénomène de petit monde. Ces deux valeurs correspondent à la distance collaborative, d'un côté entre Kevin Bacon et d'autres acteurs/actrices ayant collaboré dans des films, et de l'autre entre le mathématicien Paul Erdos et d'autres auteurs/autrices ayant participé à l'écriture d'articles académiques @collins1998s. Selon le phénomène de petit monde, chaque personne aurait un degré de séparation avec une autre personne de six maximum, c'est-à-dire que deux personnes seraient liées par l'entremise de six personnes maximum. Cela concorde donc avec le résultat que nous avons obtenu à la Figure 3, soit qu'il y a 4 personnes au maximum séparant Élisabeth Roy des autres étudiant(e)s. Toutefois, cette valeur ne prend en compte qu'une seule étudiante. Il serait donc intéressant de faire la moyenne de ce même calcul pour tous les étudiants afin de voir le degré de séparation moyen entre les individus de notre réseau.
 
 # Conclusion
+
+Le but de ce travail était d'établir si le réseau de collaboration des étudiants du cours de BIO500 de l'Université de Sherbrooke à l'hiver 2022 concordait avec les caractéristiques d'un réseau de petit monde. Pour ce faire, une figure représentant le réseau de collaboration des étudiant entre eux fut produite. Cette figure démontrait une certaine centralité au niveau des étudiants ayant un nombre de lien plus fort par rapport à ceux ayant un nombre de lien plus faible. La corrélation entre le nombre de liens par étudiant et leur centralité dans une figure n'étant, cependant, pas significative. Par contre, le degré de séparation, calculé sur un étudiant pris au hazard, correspond au nombre de degré normalement retrouvé dans un réseau de petit monde. Il n'est donc pas possible de dire que le réseau de collaboration des étudiants du cours de BIO500 concorde avec toutes les caractéristiques d'un réseau de petit monde. Cepandant, des analyses plus poussés pourraient permettre de mieux comparer ces types de réseau. 
 
 \newpage
 
